# LUMI

./: .env.devnet  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  idl.json  package-lock.json  package.json
app/: .env.local  package-lock.json  package.json  tsconfig.json
app/idl/: lumi.json
app/lib/: ids.ts  solana.ts
app/pages/: _app.tsx  admin.tsx  index.tsx
app/styles/: globals.css
programs/lumi/: Cargo.toml
programs/lumi/src/: lib.rs
scripts/: lumi.ts  set_lumi_metadata.ts
tests/: lumi.test.ts
