[package]
name = "lumi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lumi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
cpi = []
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = [
  "token",
  "token_2022",
  "associated_token"
] }